--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "prisma": "^5.20.0",
     "serve": "^14.2.4",
     "typescript": "^5.6.3",
+    "vercel": "^48.10.3",
     "wait-on": "^8.0.1"
   }
 }
