Update project files

--- a/package.json
+++ b/package.json
@@ -43,13 +43,19 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@upstash/ratelimit": "^1.1.2",
+    "@upstash/redis": "^1.35.0",
     "autoprefixer": "^10.4.20",
     "bcryptjs": "^2.4.3",
+    "bullmq": "^5.63.2",
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "csv-parser": "^3.2.0",
+    "docx": "^9.5.1",
     "framer-motion": "^11.3.10",
+    "ioredis": "^5.8.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.429.0",
     "next": "^14.2.18",
     "next-auth": "^4.24.10",
@@ -57,12 +63,18 @@
     "papaparse": "^5.4.1",
     "pdf-parse": "^2.4.5",
     "pdfjs-dist": "^5.4.394",
+    "pdfkit": "^0.17.2",
+    "pg": "^8.11.3",
+    "pino": "^9.4.0",
+    "pino-pretty": "^11.2.2",
     "postcss": "^8.4.41",
+    "pptxgenjs": "^4.0.1",
     "razorpay": "^2.9.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-pdf": "^10.2.0",
     "resend": "^6.4.2",
+    "sanitize-html": "^2.11.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss": "^3.4.11",
     "tailwindcss-animate": "^1.0.7",
@@ -73,8 +85,10 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.17",
     "@types/papaparse": "^5.3.14",
+    "@types/pg": "^8.10.9",
     "@types/react": "^18.3.7",
     "@types/react-dom": "^18.3.1",
     "concurrently": "^9.0.1",
